changing some timeline stuff and reactive manifesto

--- a/fonts/icomoon/icomoon/style.css
+++ b/fonts/icomoon/icomoon/style.css
@@ -1035,6 +1035,9 @@
 .icon-graduation-cap:before {
     content: "\e9b1";
 }
+.icon-born:before {
+    content: "\e9b1";
+}
 .icon-grid2:before {
     content: "\e9b2";
 }
