--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,13 @@ body {
 }
 
 a {
-  color: #FF9000;
+  color: #515151;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #FF9000;
+  color: #000000;
   outline: none;
   text-decoration: none;
 }
@@ -71,17 +71,17 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #FF9000;
+  background: #02ce02;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #FF9000;
+  background: #02ce02;
 }
 
 ::selection {
   color: #fff;
-  background: #FF9000;
+  background: #02ce02;
 }
 
 #fh5co-header,
@@ -196,7 +196,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-features {
-  background: #FF9000;
+  background: #666666;
 }
 #fh5co-features h2 {
   color: #fff;
@@ -231,7 +231,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: table-cell;
   vertical-align: middle;
   height: 100px;
-  color: #FF9000 !important;
+  color: #666666 !important;
 }
 #fh5co-features .feature-left .feature-copy {
   width: 100%;
@@ -282,7 +282,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .fh5co-bg-dark {
   background: #3f679c;
-  background: #fec48c;
+  background: #c4c4c4;
 }
 .fh5co-bg-dark .fh5co-heading h2 {
   color: #fff !important;
@@ -339,7 +339,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #FF9000;
+  color: #dcdcdc;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -364,8 +364,8 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #fff;
-  background: #2F3C4F;
+  color: #ffffff;
+  background: #000000;
   padding: 10px 10px 2px 10px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -376,7 +376,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 20px;
 }
 #fh5co-about .fh5co-social-icons li a:hover {
-  background: #FF9000;
+  background: #000000;
 }
 
 .fh5co-heading {
@@ -389,7 +389,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 40px;
   margin-bottom: 20px;
   line-height: 1.5;
-  color: #000;
+  color: #000000;
 }
 .fh5co-heading p {
   font-size: 18px;
@@ -506,7 +506,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 40px;
   left: 50%;
   margin-left: -21px;
-  background-color: #FF9000;
+  background-color: #666666;
   z-index: 100;
   display: table;
   -webkit-border-radius: 50%;
