--- a/css/style.css
+++ b/css/style.css
@@ -1103,7 +1103,7 @@ input[type="text"] {
 }
 
 .btn-primary {
-  background: #FF9000;
+  background: #b9eba2;
   color: #fff;
   border: 2px solid #FF9000;
 }
